# templates

./: README.md  flake.nix
aiml-basic/: Cargo.toml  flake.nix  requirements.txt
book/: README.md  book.toml  flake.nix
golang-basic/: flake.nix
python-basic/: README.md  flake.nix
rust-aws-sam/: .gitignore  Cargo.toml  Makefile.toml  README.md  deny.toml  flake.nix  samconfig.toml  template.yaml
rust-aws-sam/scripts/: build.sh  run_local.sh
rust-aws-sam/src/: main.rs
rust-axum/rust-axum/: .gitignore  Cargo.toml  flake.nix
rust-axum/rust-axum/app-backend/: Cargo.toml  start_dev_client.sh  start_dev_server.sh
rust-axum/rust-axum/app-backend/src/: ctx.rs  error.rs  log.rs  main.rs  model.rs
rust-axum/rust-axum/app-backend/src/web/: mw_auth.rs  routes_login.rs  routes_tickets.rs
rust-axum/rust-axum/app-backend/tests/: quick_dev.rs
rust-basic/: Cargo.toml  flake.nix
rust-dioxus/: Cargo.toml  flake.nix  index.html
rust-dioxus/src/: main.rs
rust-google/: .gitignore  Cargo.toml  README.md  flake.nix
rust-google/pmc-google/: Cargo.toml
rust-google/pmc-google/examples/: drive.rs  sheets.rs
rust-google/pmc-google/src/: drive.rs  lib.rs  sheets.rs
rust-hosting-wasm/: Cargo.toml  flake.nix
rust-hosting-wasm/common/: Cargo.toml
rust-hosting-wasm/wasm-host/: Cargo.toml  fibonacci.wasm
rust-hosting-wasm/wasm-host/src/: main.rs  main.rs.saved
rust-hosting-wasm/wasm-vm-a/: Cargo.toml
rust-hosting-wasm/wasm-vm-a/src/: lib.rs
rust-iot-nrf52/: Cargo.toml  Embed.toml  README.md  flake.nix
rust-iot-nrf52/.cargo/: config.toml
rust-iot-nrf52/src/: main.rs  main_example.rs  serial_setup.rs
rust-iot-stm32/: .envrc  Cargo.toml  Embed.toml  README.md  flake.nix  memory.x
rust-iot-stm32/.cargo/: config.toml
rust-iot-stm32/examples/: uart.rs
rust-iot-stm32/openocd/: ocd_stlv2_stm32f1.cfg  ocd_stlv2_stm32f1_flash.cfg
rust-iot-stm32/src/: main.rs
rust-node/: Cargo.toml  Makefile.toml  flake.nix  flake.old
rust-yew/: .gitignore  Cargo.toml  flake.nix  index.html  result
tex-basic/: document.tex  flake.nix
vagrant-basic/: README.md  flake.nix
