[package]
name = "rust-aws-sam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "^0.7"
aws-sdk-dynamodb = "^0.7"
base64 = "^0.13"
hyper = { version = "^0.14", features = ["full"] }
lambda_runtime = "^0.5"
log = "^0.4"
opentelemetry = "^0.17"
opentelemetry-aws = "^0.5"
opentelemetry-http = "^0.6"
simple_logger = "^2"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
tokio = { version = "^1", features = ["full"] }
tracing = "^0.1"
tracing-opentelemetry = "^0.17"
tracing-subscriber = { version = "^0.3", default-features = false, features = [ "smallvec", "env-filter", "fmt", "tracing-log", "std" ]}
uuid = { version = "^0.8", features = ["serde", "v4"] }
