[package]
name = "rust-iot-nrf52"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
heapless = "0.7.10"
lsm303agr = "0.2.2"
#microbit-v2 = "0.13.0" Optional BSP for microbit v2
nb = "1.0.0"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
nrf52833-hal = { version = "^0.15", optional = true, features = ["rt"] }

[features]
52833 = ["nrf52833-hal"]
