[package]
name = "rust-iot-stm32"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.6"
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
heapless = "0.7.10"
#rtt-target = { version = "0.3.1", features = ["cortex-m"] }
#panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
nb = "1.0.0"
stm32f1xx-hal = { version = "0.9.0", optional = true }
cortex-m-semihosting = "0.5.0"

[features]
f103 = [ "stm32f1xx-hal/rt", "stm32f1xx-hal/medium",  "stm32f1xx-hal/stm32f103" ]

