[package]
name = "wasm-host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "^1" }
wasmedge-sdk = { version = "^0.7" }
wasmedge-sys = { version = "^0.12" }
wasmedge-types = { version = "^0.3" }