[package]
name = "wasm_vm_a"
version = "0.1.0"
edition = "2021"

[lib]
name = "wasm_vm_a"
path = "src/lib.rs"
crate-type =["cdylib"]

[dependencies]
num-integer = "0.1"
sha3 = "0.8.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasmedge-bindgen = "0.1.0"
wasmedge-bindgen-macro = "0.1.0"
