[package]
name = "app-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.72"
axum = { version = "0.6.19", features = [
    "headers",
    "http2",
    "macros",
    "tracing",
    "ws",
] }
image = { version = "0.24.6", features = ["png"] }
lazy-regex = "3.0.0"
serde = { version = "1.0.176", features = ["derive"] }
serde_json = "1.0.104"
serde_with = "3.1.0"
strum_macros = "0.25.1"
tokio = { version = "1", features = ["full"] }
tower-cookies = "0.9.0"
tower-http = { version = "0.4.3", features = ["fs"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
